# rocket-api-base

./: .gitignore  Cargo.toml  README.md
.github/workflows/: main.yml
src/: lib.rs
tests/: base_response.rs  base_response_serialize.json  base_response_serialize_no_content.json  basic_auth_handler_invalid_credentials.json  basic_auth_handler_invalid_format.json  jwt_auth_handler_invalid_header.json  jwt_auth_handler_missing_header.json  jwt_auth_handler_ok.json  jwt_auth_handler_tampered_token.json  rocket_basic_auth_handler.rs  rocket_jwt_auth_handler.rs
