[package]
name = "rocket-api-base"
version = "0.1.0"
authors = ["PauMAVA <paumachetti@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
base64 = "0.13.0"
sha256 = "1.0.0"
hmac-sha256 = "0.1.6"
rocket = "0.4.10"
