[package]
name = "rocket-api-base"
version = "0.2.0"
authors = ["PauMAVA <paumachetti@gmail.com>"]
edition = "2018"
description = "Base utilities for secure API construction with Rocket.rs"
repository = "https://github.com/PauMAVA/rocket-api-base"
readme = "README.md"
license = "MIT"
keywords = ["api", "rocket", "jwt"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
base64 = "0.13.0"
rand = "0.8.3"
sha256 = "1.0.0"
hmac-sha256 = "0.1.6"
rocket = "0.4.10"
rocket_contrib = { version = "0.4.7", features = ["json"] }
glob = "0.3.0"
